--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 	        	<ul>
 		            	<li>Funciona de maneira distribuída</li>
         		    	<li>Permite a edição concorrente de arquivos do projeto</li>
+        		    	<li>Permite a edição concorrente de arquivos do projeto</li>
+		            <li>Não depende de uma conexão ativa com um servidor</li>
 		            <li>Não depende de uma conexão ativa com um servidor</li>
 		        </ul>
 		</body>
