--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
 	<head>
+        <link =
+    </head>
 		<body>
-			<h1>Git</h1>
+			<h1> 011 é o DD :Git EU ESTOU APRENDENDO MUITO</h1>
         		<h2>Trabalhando em Equipe com Controle e Segurança</h2>
 
         		<p>Um curso que explora os benefícios de utilizar o Git como ferramenta de controle de versão para projetos em qualquer linguagem, em qualquer plataforma.</p>
@@ -10,10 +12,8 @@
 	        	<ul>
 		            	<li>Funciona de maneira distribuída</li>
         		    	<li>Permite a edição concorrente de arquivos do projeto</li>
-        		    	<li>Permite a edição concorrente de arquivos do projeto</li>
-		            <li>Não depende de uma conexão ativa com um servidor</li>
 		            <li>Não depende de uma conexão ativa com um servidor</li>
 		        </ul>
 		</body>
-	</head>
+	
 </html>
