--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
-        <link =
+        <title>TESTE MAROTO</title>
+        <link rel="stylesheet" type="text/css" href="main.css">
     </head>
 		<body>
 			<h1> 011 é o DD :Git EU ESTOU APRENDENDO MUITO</h1>
